--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
       <!--==================== HOME ====================-->
       <section class="home">
         <div class="home__container container">
-          
           <div class="home__data">
             <span class="home__subtitle"> Error 404 </span>
             <h1 class="home__title">Hey Buddy</h1>
@@ -78,7 +77,7 @@
     </main>
 
     <!--=============== SCROLLREVEAL ===============-->
-    <script src=""></script>
+    <script src="./assets/js/scrollreveal.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="./assets/js/main.js"></script>
